Fixes a bug where the menu breaks on scroll in tablet view

--- a/public/css/solder.css
+++ b/public/css/solder.css
@@ -111,7 +111,6 @@ input[type=file] {
 }
 
 .sidebar-scrolled {
-	position: fixed;
 	width: inherit;
 	top: 0;
 }
